--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script>
             $(document).ready(function(){
 
-                var app = new App($('#main').get(0));
+                window.app = new App($('#main').get(0));
 
             });
         </script>
