--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+        <meta name="viewport" content="width=1024"/>
         <link href="https://fonts.googleapis.com/css?family=Lora|Marcellus+SC" rel="stylesheet">
         
         
@@ -43,7 +44,7 @@
 
             #content { position: absolute; top: 19vh; left: 50vw; max-width: 30%; }
             #title { font-size: 60px; color: #bcbcbc; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5); font-family: "Marcellus SC", sans-serif; }
-            .description { font-size: 14px; color: #999; margin-top: 30px; width: 100%; }
+            .description { font-size: 14px; color: #999; margin-top: 30px; width: 100%; line-height: 2em; }
             .description p { padding: 10px 0; }
             .description ul { list-style-type: square; list-style-position: outside; margin-left: 25px; }
             .description ul li { padding-bottom: 2px; }
