--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="viewport" content="width=device-width"/>
         <link href="https://fonts.googleapis.com/css?family=Lora|Marcellus+SC" rel="stylesheet">
         
         
