--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
             #wrapper {
                 width: 100%;
+                min-width: 800px;
                 position: relative;
                 margin: 0 auto 0 auto;
             }
