--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
             * { margin: 0; padding: 0; }
             html, body {
                 width: 100%;
+                height: 100%;
+                min-width: 800px;
                 background: #000;
                 font-family: "Lora", serif;
             }
 
             #wrapper {
                 width: 100%;
-                min-width: 800px;
+                height: 100%;
                 position: relative;
                 margin: 0 auto 0 auto;
             }
 
             #main {
-                height: 100vh;
+                height: 100%;
             }
             #main canvas {
                 margin: 0;
@@ -42,7 +44,7 @@
                 display: block;
             }
 
-            #content { position: absolute; top: 19vh; left: 50vw; max-width: 30%; }
+            #content { position: absolute; top: 19%; left: 50%; max-width: 30%; }
             #title { font-size: 60px; color: #bcbcbc; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5); font-family: "Marcellus SC", sans-serif; }
             .description { font-size: 14px; color: #999; margin-top: 30px; width: 100%; line-height: 2em; }
             .description p { padding: 10px 0; }
