--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             .description { font-size: 14px; color: #999; margin-top: 30px; width: 100%; line-height: 2em; }
             .description p { padding: 10px 0; }
             .description ul { list-style-type: square; list-style-position: outside; margin-left: 25px; }
-            .description ul li { padding-bottom: 2px; }
+            .description ul li { padding-bottom: 2px; line-height: 1.4em; padding-bottom: 5px; }
             
             #contact { display: inline-block; font-size: 18px; margin-top: 20px; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);  }
 
@@ -61,7 +61,7 @@
             </div>
             <div id="content">
                 <div id="title">Ayfer Network</div>
-                <div class="description">
+                <div id="description" class="description">
                     <div class="text">
                         <p style='font-size: 1.2em;'>Serving startups in the SF Bay Area that need a seasoned technologist on
                         their executive team on a less than full-time basis</p>
