--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             .description ul { list-style-type: square; list-style-position: outside; margin-left: 25px; }
             .description ul li { padding-bottom: 2px; line-height: 1.4em; padding-bottom: 5px; }
             
-            #contact { display: inline-block; font-size: 18px; margin-top: 20px; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);  }
+            #contact { display: inline-block; border-bottom: 1px solid #666; font-size: 18px; margin-top: 20px; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5);  }
 
         </style>
     </head>
