linkedin badge hic olmadi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Montserrat" rel="stylesheet">
-        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
         
         
         <meta charset="utf-8" />
@@ -150,7 +149,9 @@
                     </div>
 -->
                     <div class="text About">
-			<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="oayfer"><a class="LI-simple-link" href='https://www.linkedin.com/in/oayfer?trk=profile-badge'>Omer Ayfer</a></div>
+			<p class="bigger">Omer Ayfer, Principal</p>
+			<p>A technologist with exceptional dynamic range, comfortable with both strategic and hands-on work. Currently focused on cloud computing, information security and the needs of ambitious technology startups. Positions held include a series of IT leadership roles at numerous biotechnology companies in addition to advisory roles at early stage startups. An industry thought-leader, specializing in speaking engagements on topics such as blockchain and cryptography, including regular appearances as a guest lecturer at the Haas School of Business at UC Berkeley.</p>
+			<p>Learn more at <a href="https://www.linkedin.com/in/oayfer">LinkedIn</a>.</p>
                     </div>
                     <div id="contact"><img src='./email.svg' class='icon' /> contact@ayfer.network</div>
                 </div>
