--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 background: #000;
                 font-family: "Open Sans", serif;
             }
+	    a:link { color: #bcbcff; }
+	    a:visited { color: #ffbcbc; }
 
             #wrapper {
                 width: 100%;
