--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 display: block;
             }
 
-            #content { position: absolute; top: 19%; left: 50%; max-width: 30%; margin-bottom: 100px; }
+            #content { position: absolute; top: 19%; left: 33%; max-width: 60%; margin-bottom: 100px; }
             #title { font-size: 60px; color: #bcbcbc; text-shadow: 0 0 15px rgba(255, 255, 255, 0.5); font-family: "Montserrat", sans-serif; }
             .description { font-size: 14px; color: #999; margin-top: 30px; width: 100%;  line-height: 22px; }
             .description p { padding: 10px 0; }
@@ -116,34 +116,32 @@
                     <div class="text Services">
                         <p class="bigger">We can help you get your startup off the ground</p>
                         <ul>
-                         <li>Technology infrastructure for a new facility</li>
-                         <li>Collaboration environment that matches your startup culture</li>
-                         <li>Foundational policies, training and compliance</li>
+                         <li>Planning technology infrastructure for a new facility</li>
+                         <li>Choosing a collaboration environment that matches your startup culture</li>
+                         <li>Authoring foundational policies, training and compliance</li>
                         </ul>
 
                         <p class="bigger">We provide technology guidance supporting the development, marketing
                         and sale of your products</p>
                         <ul>
-                         <li>Cloud infrastructure for compute intensive products (e.g. next
+                         <li>Building cloud infrastructure for compute intensive products (e.g. next
                          generation sequencing pipelines)</li>
-                         <li>Customer facing portal</li>
-                         <li>Devops culture for software teams</li>
-                         <li>Automation in various forms</li>
+                         <li>Designing customer facing portal</li>
+                         <li>Encouraging devops culture for software teams</li>
+                         <li>Identifying opportunities for automation in various forms</li>
                         </ul>
 
-                        <p class="bigger">We connect you to the right people</p>
+                        <p class="bigger">We are a source of high-quality referrals</p>
                         <ul>
                          <li>Connections to trusted network of experts and vendors</li>
-                         <li>Trusted relationship with a managed service provider for
+                         <li>Trusted relationships with managed service providers for
                          day-to-day IT needs</li>
                          <li>Building an internal IT team when the time is right</li>
                         </ul>
 
                         <p class="bigger">We will draw your attention towards information security</p>
                         <ul>
-                         <li>Weaved into all of our service offerings</li>
-                         <li>Help with finding the most appropriate amount of investment in
-                         this area</li>
+                         <li>Woven into all of our service offerings</li>
                         </ul>
                     </div>
 <!--                    <div class="text Clients">
