--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             Offering <span class="bigger">fractional CIO and CTO</span> services, including:
                         </p>
                         <ul>
-                            <li>Setting up technology infrastructure properly</li>
+                            <li>Setting up a technology infrastructure properly</li>
                             <li>Crafting a sensible information security strategy</li>
                             <li>Building a cloud strategy for high performance computing, especially in
                             biotechnology use cases</li>
