--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <ul>
                             <li>Setting up a technology infrastructure properly</li>
                             <li>Crafting a sensible information security strategy</li>
-                            <li>Building a cloud strategy for high performance computing, especially in
+                            <li>Building a cloud strategy for resilient and/or high performance computing, especially in
                             biotechnology use cases</li>
                             <li>Providing access to a trusted network of service providers for all IT needs</li>
                         </ul>
